apps/commafeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  namespace: commafeed
spec:
  selector:
    app: commafeed
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
